# generic_asset

./: Cargo.toml
src/: lib.rs  mock.rs
